<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"> <!-- 홈 화면 -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- 메인홈 뒷배경 -->
            <View
                android:id="@+id/bg_main"
                android:layout_width="360dp"
                android:layout_height="297dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:background="@color/mint" />

            <!-- 메인홈 강아지 사진 -->
            <View
                android:id="@+id/img_dog_1"
                android:layout_width="161dp"
                android:layout_height="260dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="212dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="23dp"
                android:background="@drawable/img_dog"
                android:alpha="1" />

            <!-- 신청 전 문구 -->
            <TextView
                android:id="@+id/text_entertitle"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="32dp"
                android:text="@string/beforeVol"
                android:textAppearance="@style/beforeVol"
                android:lineSpacingExtra="5sp"
                android:translationY="-2.52sp"
                android:gravity="top" />

            <!-- 신청 전 티켓 -->
            <View
                android:id="@+id/vector"
                android:layout_width="328dp"
                android:layout_height="147dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="136dp"
                android:background="@drawable/vector_ticket" />

            <!-- 뛰는 강아지 -->
            <View
                android:id="@+id/running_dog"
                android:layout_width="118dp"
                android:layout_height="145dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="137dp"
                android:background="@drawable/ic_dog" />

            <!-- 신청하러 가기 -->
            <TextView
                android:id="@+id/applyVol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="181dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="174dp"
                android:text="@string/applyVol"
                android:textAppearance="@style/applyVol"
                android:lineSpacingExtra="4sp"
                android:translationY="-2.02sp"
                android:gravity="center_horizontal|top" />

            <!-- 플러스 아이콘 -->
            <ImageButton
                android:id="@+id/plus"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="226dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="210dp"
                android:background="@drawable/ic_plus" />

            <!-- 이동 봉사 시 주의사항-->
            <!--<View
                android:id="@+id/noticeBg"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="4dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="310dp"
                android:background="@drawable/rect_notice_2"
                android:gravity="center" />
            <View
                android:id="@+id/noticeIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="24dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="330dp"
                android:background="@drawable/ic_info"/>
            <TextView
                android:id="@+id/some_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="53dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="329dp"
                android:text="@string/infoText"
                android:textAppearance="@style/info"
                android:lineSpacingExtra="4sp"
                android:translationY="-2.02sp"
                android:gravity="center_horizontal|top" />
            <View
                android:id="@+id/noticeArrow"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="304dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="322dp"
                android:background="@drawable/ic_arrow"/> -->

            <!-- height wrap 고정 필수 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/expandable"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="310dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="6.6dp"
                app:contentPadding="10dp"
                app:cardBackgroundColor="@color/light_light_grey">

                <LinearLayout
                    android:id="@+id/layouts"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- 첫 번째 LinearLayout (titleText와 noticeIcon을 가로로 배치) -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <View
                            android:id="@+id/noticeIcon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/ic_info"/>

                        <TextView
                            android:id="@+id/titleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginLeft="9dp"
                            android:text="@string/demo"
                            android:textAppearance="@style/noticeTitle" />

                        <View
                            android:id="@+id/noticeArrow"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="96dp"
                            android:layout_alignParentTop="true"
                            android:background="@drawable/ic_arrow"/>
                    </LinearLayout>

                    <!-- 두 번째 LinearLayout (detailsText를 가로로 배치) -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/detailsText"
                            android:visibility="gone"
                            android:text="@string/faketext"
                            android:textAppearance="@style/details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- 나와 함께한 친구들 -->
            <TextView
                android:id="@+id/withmeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="393dp"
                android:text="@string/withmeTitle"
                android:textAppearance="@style/withmeTitle"
                android:lineSpacingExtra="5sp"
                android:translationY="-2.52sp"
                android:gravity="center_horizontal|top" />

            <!-- 드디어 가족을 만났어요 -->
            <TextView
                android:id="@+id/meetFamilyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="585dp"
                android:text="@string/meetFamilyTitle"
                android:textAppearance="@style/withmeTitle"
                android:lineSpacingExtra="5sp"
                android:translationY="-2.52sp"
                android:gravity="center_horizontal|top" />

            <View
                android:id="@+id/meetFamilyBg"
                android:layout_width="328dp"
                android:layout_height="112dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="615dp"
                android:background="@drawable/rect_board" />

            <View
                android:id="@+id/meetFamilyImg"
                android:layout_width="94dp"
                android:layout_height="94dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="238dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="624dp"
                android:background="@drawable/img_family" />

            <TextView
                android:id="@+id/meetFamilyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="28dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="633dp"
                android:text="@string/meetFamilyName"
                android:textAppearance="@style/meetFamilyName"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.76sp"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/meetFamilyContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="28dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="660dp"
                android:text="@string/meetFamilyContent"
                android:textAppearance="@style/meetFamilyContent"
                android:lineSpacingExtra="3sp"
                android:translationY="-1.51sp"
                android:gravity="top" />


            <!-- 평생 가족을 기다려요 -->
            <TextView
                android:id="@+id/waitFamilyTitle"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="781dp"
                android:layout_marginBottom="150dp"
                android:text="@string/waitFamilyTitle"
                android:textAppearance="@style/withmeTitle"
                android:lineSpacingExtra="5sp"
                android:translationY="-2.52sp"
                android:gravity="center_horizontal|top" />

        </RelativeLayout>

    </ScrollView>




</FrameLayout>